Adding some emphasis!

--- a/Hunt.Mobile.Common/Pages/DashboardPage.xaml
+++ b/Hunt.Mobile.Common/Pages/DashboardPage.xaml
@@ -15,7 +15,7 @@
 			</Grid.RowDefinitions>
 
 			<local:NavigationBar
-				Title="Dashboard"
+				Title="Dashboard!"
 				CanMoveBack="false">
 				<local:NavigationBar.LeftToolbar>
 					<local:SvgImage
